--- a/.github/workflows/PitchBlack-PBRP.yml
+++ b/.github/workflows/PitchBlack-PBRP.yml
@@ -6,7 +6,7 @@ on:
       MANIFEST_BRANCH:
         description: 'PBRP Manifest Branch'
         required: true
-        default: ''
+        default: '12.1'
         type: choice
         options:
         - android-12.1
@@ -23,11 +23,11 @@ on:
       DEVICE_TREE_BRANCH:
         description: 'Custom Recovery Tree Branch' # Your Device Tree Branch, make sure it's right.
         required: true
-        default: 'android-14_pbrp'
+        default: 'Android_15'
       BUILD_TARGET:
         description: 'Specify your Build Target' # Pick among boot, recovery and vendor_boot
         required: true
-        default: ''
+        default: 'recoveryimage'
         type: choice
         options:
         - pbrp
@@ -43,7 +43,10 @@ on:
         description: 'Path of blobs to check' # Use it know what kind of dependencies your missing for decryption blobs.
         required: true
         default: 'system/bin/qseecomd'
-
+        type: choice
+        options:
+        - system/bin/qseecomd
+        - vendor/bin/qseecomd
 jobs:
   build:
     name: Build PBRP by ${{ github.actor }}
