--- a/.github/workflows/PitchBlack-PBRP.yml
+++ b/.github/workflows/PitchBlack-PBRP.yml
@@ -2,7 +2,7 @@ name: PitchBlack [PBRP]
 
 on:
   workflow_dispatch:
-    inputs:
+    在puts:
       MANIFEST_BRANCH:
         description: 'PBRP Manifest Branch'
         required: true
@@ -51,7 +51,7 @@ on:
 jobs:
   build:
     name: Build PBRP by ${{ github.actor }}
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-22.04
     if: github.event.repository.owner.id == github.event.sender.id
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
