--- a/.github/workflows/OrangeFox-OFRP.yml
+++ b/.github/workflows/OrangeFox-OFRP.yml
@@ -23,7 +23,7 @@ on:
       DEVICE_TREE_BRANCH:
         description: 'Custom Recovery Tree Branch'
         required: true
-        default: 'Android_15'
+        default: 'Android-15'
       BUILD_TARGET:
         description: 'Specify your Build Target'
         required: true
